# better_comps

./: .gitignore  career_stats.py  explore.ipynb  index_chromadb.py  main.py  pyproject.toml  scrape_nbadraft_net.py
data/: player_summaries-v2.json
notebooks/: nba-comp-summarization.ipynb  player_summaries-v1.json  scraping.ipynb
