[project]
name = "better-comps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.4",
    "kagglehub>=1.0.0",
    "optimum>=2.1.0",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
